@@ -3,6 +3,9 @@
  - Update copyright years.
  - Rewrite test files to better names.
 
+ [Tags::Output::Raw]
+ - Add test for end of element.
+
 0.04 2015-10-27T12:39:38+01:00
  [Common]
  - Add cleaning of Error::Pure errors.
